--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ ipython_config.py
 .pdm.toml
 .pdm-python
 .pdm-build/
+.bak_010d   
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
@@ -160,3 +161,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+VP/bd_calidad20241.vpp.bak_010d
