--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,9 @@ VP/bd_calidad20241.vpp.bak_010d
 /controladores/docente/__pycache__
 /controladores/usuario/__pycache__
 /routers/__pycache__
+/clases/__pycache__
+/controladores/__pycache__
+/controladores/ambientes/__pycache__
+/controladores/cursos/__pycache__
+/controladores/usuario/__pycache__
+/routers/__pycache__
