--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,4 @@ VP/bd_calidad20241.vpp.bak_010d
 /controladores/cursos/__pycache__
 /controladores/usuario/__pycache__
 /routers/__pycache__
+*.pyc
